# open

./: .gitignore  CMakeLists.txt  README.md  install.sh
.github/workflows/: cmake.yml
inc/: config.hpp  open.hpp  project.hpp  screen.hpp  send.hpp
scripts/: OpenLaunchCmd.sh  RangerLaunchCmd.sh
src/: open.cpp  project.cpp  screen.cpp  send.cpp
